Small fix to stop page getting too wide

--- a/Website/style dark.css
+++ b/Website/style dark.css
@@ -123,7 +123,6 @@ header label
 {
 	margin: 10px 10% 0 10%;
 	float: left;
-	width: 100%;
 }
 .header-text
 {
